compiler fixes