@@ -20,6 +20,7 @@
 package com.sigpwned.hermes.aws.lambda.kinesis;
 
 import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toList;
 import java.util.List;
 import com.amazonaws.services.lambda.runtime.Context;
 import com.sigpwned.hermes.core.model.Message;
@@ -35,7 +36,8 @@ public abstract class BeanKinesisConsumerLambdaFunctionBase<T>
 
   @Override
   public void handleMessages(List<Message> messages, Context context) {
-    handleBeans(messages.stream().map(getDeserializer()::deserializeBean).toList(), context);
+    handleBeans(messages.stream().map(getDeserializer()::deserializeBean).collect(toList()),
+        context);
   }
 
   public abstract void handleBeans(List<T> values, Context context);
